--- a/OFFERS-303/es/index.html
+++ b/OFFERS-303/es/index.html
@@ -84,7 +84,7 @@
 			<h2 class="center black"> ¡Un verdadero tratamiento de spa en tu casa!</h2>
 			<img src="img/sect2.png" alt>
 			<p>
-				<b> Bomba de arcoiris</b> transforma tu baño en un pequeño salón de spa.<b> Los aceites esenciales limpian, hidratan y tonifican suavemente la piel,</b> sin causar irritación o enrojecimiento en absoluto. Diseño multicolor brillante, agradable fragancia, hermoso color del agua dará una sensación de libertad interior, mejorar el estado de ánimo,<b> aliviará el estrés y eliminará la fatiga.</b>
+				<b> Bomba de arcoiris</b> transforma tu baño en un pequeño salón de spa.<b> Los aceites esenciales limpian, hidratan y tonifican suavemente la piel,</b> sin causar irritación o enrojecimiento en absoluto. Diseño multicolor brillante, agradable fragancia, hermoso color del agua dará una sensación de libertad interior, mejora el estado de ánimo,<b> aliviará el estrés y eliminará la fatiga.</b>
 			</p>
 		</section>
 		<section class="sect3">
@@ -173,7 +173,7 @@
 				</div>
 				<div class="sect6__item">
 					<div class="top"><img src="img/sect6_2.svg" alt> <b> Paso 2</b></div>
-					<p> El encargado se comunica con usted usted para realizar el pedido.</p>
+					<p> El encargado se comunica con usted para realizar el pedido.</p>
 				</div>
 				<div class="sect6__item">
 					<div class="top"><img src="img/sect6_3.svg" alt> <b> Paso 3</b></div>
