--- a/OFFERS-303/gr/index.html
+++ b/OFFERS-303/gr/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
 	<meta charset="utf-8">
-	<title>"Bath Bombs" "Rainbow" ""</title>
+	<title> Bath Bombs "Rainbow" </title>
 <meta property="og:title" content="Бомба для ванной Радуга">
 <meta property="og:description" content="с эфирными маслами">
 <meta property="og:image" content="https://i.imgur.com/BtPJG1a.png">
@@ -22,11 +22,11 @@
 		<div class="intro__main">
 
 			<div class="intro__text">
-				<h2 class="left intro__title margin-left"> "Bath Bombs" "Rainbow" "με αιθέρια έλαια"</h2>
+				<h2 class="left intro__title margin-left">  Bath Bombs "Rainbow" με αιθέρια έλαια</h2>
 				<div class="subtitle"> Μια σπα περιποίηση στο σπίτι σας!</div>
 			</div>
 			<div class="triger">
-				<p> Το hit<br> της χρονιάς!</p>
+				<p> Το Ηit<br> της χρονιάς!</p>
 				<img src="img/triger.svg" alt>
 			</div>
 			<div class="prod">
@@ -38,7 +38,7 @@
 						<s> 98€</s>
 					</div>
 					<div class="new">
-						<span> Τιμή σε έκπτωση</span>
+						<span> Τιμή με έκπτωση</span>
 						<b> 49€</b>
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 					<p> ΕΧΕΙ ΧΑΛΑΡΩΤΙΚΟ ΑΠΟΤΕΛΕΣΜΑ</p>
 				</div>
 				<div class="sect1__item">
-					<p> ΤΟ ΕΝΤΟΝΟ ΑΡΩΜΑ ΔΙΑΡΚΕΙ ΓΙΑ ΑΡΚΕΤΕΣ ΗΜΕΡΕΣ</p>
+					<p> ΤΟ ΕΥΧΑΡΙΣΤΟ ΑΡΩΜΑ ΔΙΑΡΚΕΙ ΓΙΑ ΑΡΚΕΤΕΣ ΗΜΕΡΕΣ</p>
 				</div>
 			</div>
 			<a href="#offer" class="btn"> ΠΑΡΑΓΓΕΛΙΑ</a>
@@ -134,7 +134,7 @@
 			<div class="reviews owl-carousel">
 
 				<div class="reviews__item">
-					<div class="reviews__top"> Μετά από μια δύσκολη μέρα στη δουλειά, μου αρέσει πολύ να ξαπλώνω στο μπάνιο, για μένα αυτό είναι ένα είδος χαλάρωσης. Και με τη bath bombs παίρνω διπλάσια ευχαρίστηση. Μου αρέσουν πολύ οι bath bombs rainbow, έχει ένα ευχάριστο άρωμα και μια φυσική σύνθεση, δεν χρωματίζει το μπάνιο και ούτε το δέρμα. Η τιμή του είναι προσιτή, τα χρησιμοποιώ 3-4 φορές την εβδομάδα, για χαλάρωση και περιποιείται το δέρμα τέλεια!</div>
+					<div class="reviews__top"> Μετά από μια δύσκολη μέρα στη δουλειά, μου αρέσει πολύ να ξαπλώνω στο μπάνιο, για μένα αυτό είναι ένα είδος χαλάρωσης. Και με τη bath bombs παίρνω διπλάσια ευχαρίστηση. Μου αρέσει πολύ το bath bombs rainbow, έχει ένα ευχάριστο άρωμα και μια φυσική σύνθεση, δεν χρωματίζει το μπάνιο και ούτε το δέρμα. Η τιμή του είναι προσιτή, τα χρησιμοποιώ 3-4 φορές την εβδομάδα, για χαλάρωση και περιποιείται το δέρμα τέλεια!</div>
 					<div class="reviews__bottom">
 						<img src="img/ava_1.png" alt class="ava">
 						<p><b> Αλεξάνδρα 31 ετών</b> <span> Πριν από 6 ημέρες</span></p>
@@ -143,7 +143,7 @@
 					</div>
 				</div>
 				<div class="reviews__item">
-					<div class="reviews__top"> Μια έξυπνη bath bombs! Ελαφρύ ευχάριστο άρωμα, εξαιρετική ενυδάτωση και το νερό μετατρέπεται σε πραγματικό ουράνιο τόξο! Είναι ένα θέαμα θα το δείτε και μόνοι σας! Το συνιστώ!</div>
+					<div class="reviews__top"> Μια έξυπνη bath bombs! Ελαφρύ ευχάριστο άρωμα, εξαιρετική ενυδάτωση και το νερό μετατρέπεται σε πραγματικό ουράνιο τόξο! Είναι ένα θέαμα, θα το δείτε και μόνοι σας! Το συνιστώ!</div>
 					<div class="reviews__bottom">
 						<img src="img/ava_2.png" alt class="ava">
 						<p><b> Βιολέττα, 22 ετών</b> <span> Πριν από 1 ημέρα</span></p>
@@ -152,7 +152,7 @@
 					</div>
 				</div>
 				<div class="reviews__item">
-					<div class="reviews__top"> Το παιδί μου είναι χαρούμενο! Το παρήγγειλα για την κόρη μου, δεν της αρέσει να πλένεται, δεν ήξερα με τι να την εντυπωσιάσω. Της πρότεινα το bath bombs rainbow, το δοκίμασε και ξετρελάθηκε. Παραγγείλα και άλλα! Σας ευχαριστώ για τη γρήγορη παράδοση!</div>
+					<div class="reviews__top"> Το παιδί μου είναι χαρούμενο! Το παρήγγειλα για την κόρη μου, δεν της αρέσει να πλένεται και πολύ, δεν ήξερα με τι να την εντυπωσιάσω. Της πρότεινα το bath bombs rainbow, το δοκίμασε και ξετρελάθηκε. Παραγγείλα και άλλα! Σας ευχαριστώ για τη γρήγορη παράδοση!</div>
 					<div class="reviews__bottom">
 						<img src="img/ava_3.png" alt class="ava">
 						<p><b> Όλγα, 29 ετών</b> <span> Πριν 5 μέρες</span></p>
@@ -169,7 +169,7 @@
 			<div class="sect6__main">
 				<div class="sect6__item">
 					<div class="top"><img src="img/sect6_1.svg" alt> <b> ΒΗΜΑ 1</b></div>
-					<p> Αφήστε ένα αίτημα στον ιστότοπό μας</p>
+					<p> Αφήστε ένα αίτημα στον ιστότοπο μας</p>
 				</div>
 				<div class="sect6__item">
 					<div class="top"><img src="img/sect6_2.svg" alt> <b> ΒΗΜΑ 2</b></div>
@@ -189,11 +189,11 @@
 			<div class="intro__main">
 
 				<div class="intro__text">
-					<h2 class="left intro__title margin-left"> "Bath Bombs" "Rainbow" "με αιθέρια έλαια"</h2>
+					<h2 class="left intro__title margin-left">  Bath Bombs "Rainbow" με αιθέρια έλαια</h2>
 					<div class="subtitle"> Μια σπα περιποίηση στο σπίτι σας!</div>
 				</div>
 				<div class="triger">
-					<p> Το hit<br> της χρονιάς!</p>
+					<p> Το Hit<br> της χρονιάς!</p>
 					<img src="img/triger.svg" alt>
 				</div>
 				<div class="prod">
@@ -205,7 +205,7 @@
 							<s> 98€</s>
 						</div>
 						<div class="new">
-							<span> Τιμή σε έκπτωση</span>
+							<span> Τιμή με έκπτωση</span>
 							<b> 49€</b>
 						</div>
 					</div>
