--- a/OFFERS-338/it/index.html
+++ b/OFFERS-338/it/index.html
@@ -21,11 +21,11 @@
 	<header class="intro">
 		<div class="intro__header">
 			<div class="name">
-				<p class="subtitle"> Faccette rimovibili universali </p>
+				<p class="subtitle"> Faccette rimovibili </p>
 				<h2 class="title"> Shiny Dentes </h2>
 			</div>
 			<div class="prod">
-				<p class="text"> Un sorriso bianco perfetto in un solo colpo!</p>
+				<p class="text"> Un sorriso bianco in un solo colpo!</p>
 				<div class="price"> <b class="nev"> 49€</b>
 					<s class="old"> 98€</s>
 
@@ -44,7 +44,7 @@
 				<p> Ipoallergenici</p>
 			</div>
 			<div class="list__item">
-				<p> Fissaggio di lunga durata </p>
+				<p> Fissaggio ideale</p>
 			</div>
 		</div>
 		<br>
@@ -120,9 +120,9 @@
 		<section class="sect3">
 			<h2 class="sect-title"> Caratteristiche <b> Shiny Dentes</b></h2>
 			<div class="sect3__main">
-				<p> Hanno una dimensione universale</p>
-				<p> Non si scuriscono per diversi anni.</p>
-				<p> Fissaggio saldo ai denti</p>
+				<p> Dimensione universale</p>
+				<p> Non scuriscono per diversi anni.</p>
+				<p> Fissaggio saldo </p>
 				<p> Nessun disagio durante l'uso</p>
 
 			</div>
@@ -243,11 +243,11 @@
 	<footer class="intro">
 		<div class="intro__header">
 			<div class="name">
-				<p class="subtitle"> Faccette rimovibili universali </p>
+				<p class="subtitle"> Faccette rimovibili </p>
 				<h2 class="title"> Shiny Dentes </h2>
 			</div>
 			<div class="prod">
-				<p class="text"> Un sorriso bianco perfetto in un solo colpo!</p>
+				<p class="text"> Un sorriso bianco in un solo colpo!</p>
 				<div class="price"> <b class="nev"> 49€</b>
 					<s class="old"> 98€</s>
 
