--- a/OFFERS-343/es/index.html
+++ b/OFFERS-343/es/index.html
@@ -195,7 +195,7 @@
 							<p><b> Karagdagang impormasyon tungkol sa kung paano makuha ang mga kapsulang HeartKeep sa paghahatid sa bahay</b></p>
 							<p> Upang mag-order ng mga capsule ng HeartKeep, kailangang gawin ang susunod:</p>
 							<ul class="myList">
-								<li> Punan ang form<a href="#form"> sa opisyal na site</a> .</li>
+								<li> Punan ang form.</li>
 								<li> Tatawag sa inyo ang manager upang pagtibayin ang address ng paghahatid.</li>
 								<li> Sa loob ng apat – pitong (1-4) araw (panahon ng paghahatid) makakatanggap kayo ng HeartKeep sa bahay.</li>
 							</ul>
