--- a/OFFERS-350/l2/index.html
+++ b/OFFERS-350/l2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-  <script src="2"></script><title>Sirene</title>
+  <script src="2"></script><title>HairForte</title>
   <meta description="Sirene">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,6 @@
 <body>
   <header class="header">
     <div class="header-top">
-      <h1> Le Clere Sirene</h1>
       <h2> El remedio número 1 en la lucha contra la alopecia.</h2>
       <h3 class="header-banner"> Complejo de regeneración capilar</h3>
       <ul class="list-reset">
@@ -57,7 +56,7 @@
         <li> Elimina la sequedad y la rotura</li>
         <li> Aporta brillo y elasticidad</li>
       </ul>
-      <h3 class="standardTitle"> Principio de funcionamiento de Le Clere Sirene</h3><img src="img/gif.gif" alt>
+      <h3 class="standardTitle"> Principio de funcionamiento de HairForte</h3><img src="img/gif.gif" alt>
       <div class="block1-bottom">
         <h3 class="standardTitle"> Resultado garantizado en 30 días</h3><img src="img/product_small.png" alt class="block1-product">
       </div>
@@ -66,20 +65,20 @@
       <div class="block2-title">
         <p> "Primeros auxilios" para su cabello </p><img src="img/product_big.png" alt class="block2-product">
       </div>
-      <div class="block2-text"> La fórmula de restauración capilar integral del sistema Sirène Long&Strong fue desarrollada hace 10 años para combatir la alopecia. Ha sido probado con éxito en ensayos clínicos y ha sido utilizado por tricólogos durante 7 años. Gracias a él, 45.000 personas han recuperado su cabello y han vuelto a vivir plenamente.</div>
+      <div class="block2-text"> La fórmula de restauración capilar integral del sistema HairForte fue desarrollada hace 10 años para combatir la alopecia. Ha sido probado con éxito en ensayos clínicos y ha sido utilizado por tricólogos durante 7 años. Gracias a él, 45.000 personas han recuperado su cabello y han vuelto a vivir plenamente.</div>
     </section>
     <section id="block3" class="block3">
       <h3 class="standardTitle"> Opinión de un experto</h3><img src="img/expert.jpg" alt>
       <div class="block3-expertText">
         <div class="block3-expertTitle"><span> Diana López</span> Médico especialista en tricología</div>
-        <p> Hemos realizado pruebas del sistema Sirène Long&Strong en 1.670 pacientes con distintos grados de alopecia. El estudio incluyó a pacientes con cáncer después de la quimioterapia. El producto demostró ser eficaz en más del 75% de los casos, incluso cuando los folículos pilosos estaban muy dañados.</p>
+        <p> Hemos realizado pruebas del sistema HairForte en 1.670 pacientes con distintos grados de alopecia. El estudio incluyó a pacientes con cáncer después de la quimioterapia. El producto demostró ser eficaz en más del 75% de los casos, incluso cuando los folículos pilosos estaban muy dañados.</p>
       </div>
     </section>
     <section id="block4" class="block4">
       <div class="header-middle">
-        <h4> Le Clere Sirene<br> ¡Resuelva su problema de alopecia de una vez por todas!</h4>
+        <h4> HairForte<br> ¡Resuelva su problema de alopecia de una vez por todas!</h4>
         <div class="header-price">
-          <p> undefined</p>
+
           <p>  remedio №1 para combatir la alopecia</p>
           <p class="price-old"> 1530<span> pesos</span> </p>
           <p class="price-new"> 765<span> pesos</span></p><img src="img/header_middle_product.png" alt class="header-product_middle">
@@ -104,7 +103,7 @@
       </div>
     </section>
     <section id="block5" class="block5">
-      <h3 class="standardTitle"> Ensayos clínicos de Le Clere Sirene</h3>
+      <h3 class="standardTitle"> Ensayos clínicos de HairForte</h3>
       <ul class="list-reset research">
         <li> Cese completo de la caída del cabello</li>
         <li> Regeneración de los folículos pilosos dañados</li>
@@ -127,7 +126,7 @@
       </div>
       <div class="block5-components components">
         <h3 class="standardTitle"> Composición</h3>
-        <h4> Los ingredientes activos<br> de Le Clere Sirene</h4>
+        <h4> Los ingredientes activos<br> de HairForte</h4>
         <div class="components-item">
           <h5> Finasteride</h5><img src="img/line_1.svg" alt>
           <p> Inhibe la conversión<br> de la testosterona en dihidrotestosterona,<br> que provoca la caída<br> del cabello.</p>
@@ -170,19 +169,19 @@
           <div class="reviews-item"><img src="img/review_1.png" alt>
             <div class="reviews-text">
               <h4 class="reviews-author"> Carla</h4>
-              <p> Me gustaría dejar una opinión sobre el sistema Sirène Long&Strong. Tuve problemas con mis hábitos alimenticios, siendo tratado por obesidad. Todo esto tuvo un efecto muy negativo en mi cabello, en algún momento me quedé con una delgada y corta cola de caballo. Perdí peso, pero el pelo no se pudo recuperar. Probé este producto - después de un mes el pelo dejó de caer, al final el volumen de mi cabello fue restaurado. Ahora es el 5º mes - el pelo ha crecido 23 cm, se ha vuelto fuerte, brillante. Estoy muy contenta y lo recomiendo.</p>
+              <p> Me gustaría dejar una opinión sobre el sistema Hairforte. Tuve problemas con mis hábitos alimenticios, siendo tratado por obesidad. Todo esto tuvo un efecto muy negativo en mi cabello, en algún momento me quedé con una delgada y corta cola de caballo. Perdí peso, pero el pelo no se pudo recuperar. Probé este producto - después de un mes el pelo dejó de caer, al final el volumen de mi cabello fue restaurado. Ahora es el 5º mes - el pelo ha crecido 23 cm, se ha vuelto fuerte, brillante. Estoy muy contenta y lo recomiendo.</p>
             </div>
           </div>
           <div class="reviews-item"><img src="img/review_2.png" alt>
             <div class="reviews-text">
               <h4 class="reviews-author"> Karina</h4>
-              <p> Después del embarazo, mi pelo se volvió terrible: ¡literalmente en 2 meses se volvió 3 veces menos! Probé diferentes ampollas, cápsulas, gasté más de 20 mil euros en el tratamiento, pero no hubo ningún resultado. Mi médico me recomendó el sistema Sirène Long&Strong y pude ver mejores resultados en un mes. Yo sigo utilizándolo.</p>
+              <p> Después del embarazo, mi pelo se volvió terrible: ¡literalmente en 2 meses se volvió 3 veces menos! Probé diferentes ampollas, cápsulas, gasté más de 2000000 pesos en el tratamiento, pero no hubo ningún resultado. Mi médico me recomendó el sistema HairForte y pude ver mejores resultados en un mes. Yo sigo utilizándolo.</p>
             </div>
           </div>
           <div class="reviews-item"><img src="img/review_3.png" alt>
             <div class="reviews-text">
               <h4 class="reviews-author"> Elizabeth</h4>
-              <p> Compré este producto para mi madre. Tiene problemas con el sistema endocrino, mientras se trataba, perdió casi todo el pelo. Tenía pocas esperanzas pero el sistema Sirène Long&Strong me ayudó. En 3 meses su pelo se ha recuperado casi por completo. ¡Muchas gracias!</p>
+              <p> Compré este producto para mi madre. Tiene problemas con el sistema endocrino, mientras se trataba, perdió casi todo el pelo. Tenía pocas esperanzas pero el sistema HairForte le ayudó. En 3 meses su pelo se ha recuperado casi por completo. ¡Muchas gracias!</p>
             </div>
           </div>
           <div class="reviews-item"><img src="img/review_4.png" alt>
@@ -198,11 +197,11 @@
     <section id="header-bottom" class="header">
       <header class="header">
         <div class="header-middle">
-          <h4> Le Clere Sirene</h4>
+          <h4> HairForte</h4>
           <h5> ¡Es hora de detener la caída del cabello!</h5>
           <div class="header-price">
-            <p> №1</p>
-            <p> Un remedio para combatir la alopecia</p>
+            
+            <p> El remedio No.1 para combatir la alopecia</p>
             <p class="price-old"> 1350<span> pesos</span> </p>
             <p class="price-new"> 765<span> pesos</span></p><img src="img/header_middle_product.png" alt class="header-product_middle">
             <p class="price-sale"> Descuento del 50%</p>
