--- a/OFFERS-338/bg/index.html
+++ b/OFFERS-338/bg/index.html
@@ -27,7 +27,7 @@
 			<div class="prod">
 				<p class="text"> Перфектна снежнобяла усмивка с едно движение!</p>
 				<div class="price"> <b class="nev"> 96 лева</b>
-					<b class="old"> 192 лева</b>
+					<s class="old"> 192 лева</s>
 
 				</div>
 			</div>
@@ -249,7 +249,7 @@
 			<div class="prod">
 				<p class="text"> Перфектна снежнобяла усмивка с едно движение!</p>
 				<div class="price"> <b class="nev"> 96 лева</b>
-					<b class="old"> 192 лева</b>
+					<s class="old"> 192 лева</s>
 
 				</div>
 			</div>
