--- a/OFFERS-350/p3/index.html
+++ b/OFFERS-350/p3/index.html
@@ -524,6 +524,11 @@ left">
 
 
 
+                  <div class="icons_safety">
+                    <img class="lazy_image" src data-src="//bestchances-market.com/34/cheve-m-med/gps/2cdbb584ebnde715a2c9126ece644c1350/img/additional_icons/ES/ico1.png">
+                    <img class="lazy_image" src data-src="//bestchances-market.com/34/cheve-m-med/gps/0c230913c1nd12411f12080ca95ca2ebe8/img/additional_icons/ES/ico2.png">
+                    <img class="lazy_image" src data-src="//bestchances-market.com/34/cheve-m-med/gps/e4ade4f018nd9d066a778fa92fef7c3b94/img/additional_icons/ES/ico3.png">
+                  </div>
 
 
 
@@ -1001,16 +1006,25 @@ left">
         </div>
         <div class="carousel-item-bottom">
           <p class="carousel-item-author"> Mónica</p>
-          <p class="carousel-item-city"> Mi enfermedad me arruinaba la vida. ¡Pero ya es agua pasada! Gracias al tratamiento con HairForte he conseguido otra oportunidad, como si volviera a tener 25 años.</p>
+
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-item-top">
-          <p class="carousel-item-content"> Marta</p>
+          <p class="carousel-item-content"> Mi enfermedad me arruinaba la vida. ¡Pero ya es agua pasada! Gracias al tratamiento con HairForte he conseguido otra oportunidad, como si volviera a tener 25 años.</p>
         </div>
         <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> ¡Es como si alguien me hubiera regalado una nueva vida! Me he vuelto más sociable y mi familia no me reconoce de la energía y el optimismo que tengo. ¡Lo recomiendo!</p>
-          <p class="carousel-item-city"> Ana</p>
+          <p class="carousel-item-author"> Marta</p>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-item-top">
+          <p class="carousel-item-content"> ¡Es como si alguien me hubiera regalado una nueva vida! Me he vuelto más sociable y mi familia no me reconoce de la energía y el optimismo que tengo. ¡Lo recomiendo!</p>
+        </div>
+        <div class="carousel-item-bottom">
+          <p class="carousel-item-author"> Ana</p>
+
         </div>
       </div>
       <div class="carousel-item">
@@ -1019,16 +1033,25 @@ left">
         </div>
         <div class="carousel-item-bottom">
           <p class="carousel-item-author"> Rubén</p>
-          <p class="carousel-item-city"> ¿Sabéis qué es lo que más me gusta? HairForte no solo funciona, también es al 100% seguro. Por lo tanto, no provoca efectos secundarios. ¡No hay mejor método en el mundo para luchar contra este problema!</p>
+
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-item-top">
-          <p class="carousel-item-content"> Inma</p>
+          <p class="carousel-item-content"> ¿Sabéis qué es lo que más me gusta? HairForte no solo funciona, también es al 100% seguro. Por lo tanto, no provoca efectos secundarios. ¡No hay mejor método en el mundo para luchar contra este problema!</p>
         </div>
         <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> ¡Mi vecina tenía razón! HairForte es el único método que funciona de verdad.</p>
-          <p class="carousel-item-city"> Carla</p>
+          <p class="carousel-item-author"> Inma</p>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-item-top">
+          <p class="carousel-item-content"> ¡Mi vecina tenía razón! HairForte es el único método que funciona de verdad.</p>
+        </div>
+        <div class="carousel-item-bottom">
+          <p class="carousel-item-author"> Carla</p>
+
         </div>
       </div>
       <div class="carousel-item">
@@ -1037,16 +1060,25 @@ left">
         </div>
         <div class="carousel-item-bottom">
           <p class="carousel-item-author"> Raquel</p>
-          <p class="carousel-item-city"> Me sentía como un cero a la izquierda por culpa de mi problema. Llevaba años con terapias ineficaces. Hasta que un día mi mujer me regaló HairForte. Seré breve: ¡nunca me he sentido mejor!</p>
+
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-item-top">
-          <p class="carousel-item-content"> Andrés</p>
+          <p class="carousel-item-content"> Me sentía como un cero a la izquierda por culpa de mi problema. Llevaba años con terapias ineficaces. Hasta que un día mi mujer me regaló HairForte. Seré breve: ¡nunca me he sentido mejor!</p>
         </div>
         <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> Yo no creo en los milagros y solo confío en los métodos demostrados científicamente. Lo probé, ¡y los resultados superaron mis expectativas más atrevidas! No hay ningún otro método que garantice tal eficacia.</p>
-          <p class="carousel-item-city"> Joaquín</p>
+          <p class="carousel-item-author"> Andrés</p>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-item-top">
+          <p class="carousel-item-content"> Yo no creo en los milagros y solo confío en los métodos demostrados científicamente. Lo probé, ¡y los resultados superaron mis expectativas más atrevidas! No hay ningún otro método que garantice tal eficacia.</p>
+        </div>
+        <div class="carousel-item-bottom">
+          <p class="carousel-item-author"> Joaquín</p>
+
         </div>
       </div>
       <div class="carousel-item">
@@ -1055,16 +1087,25 @@ left">
         </div>
         <div class="carousel-item-bottom">
           <p class="carousel-item-author"> Margarita</p>
-          <p class="carousel-item-city"> Si hubiera sabido que era tan fácil, hace tiempo que lo habría utilizado. En un plis, ¡problema resuelto! Se lo recomiendo a todos los que hayan perdido la esperanza hace tiempo de encontrar algo que les ayude.</p>
+
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-item-top">
-          <p class="carousel-item-content"> Mariana</p>
+          <p class="carousel-item-content"> Si hubiera sabido que era tan fácil, hace tiempo que lo habría utilizado. En un plis, ¡problema resuelto! Se lo recomiendo a todos los que hayan perdido la esperanza hace tiempo de encontrar algo que les ayude.</p>
         </div>
         <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> Para mí, este descubrimiento se merece el Nobel. En 28 días eliminé por completo mi problema, y eso que los 5 anteriores lo intenté por todos los medios y nada. ¡Una pasada!</p>
-          <p class="carousel-item-city"> Marcos</p>
+          <p class="carousel-item-author"> Mariana</p>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-item-top">
+          <p class="carousel-item-content"> Para mí, este descubrimiento se merece el Nobel. En 28 días eliminé por completo mi problema, y eso que los 5 anteriores lo intenté por todos los medios y nada. ¡Una pasada!</p>
+        </div>
+        <div class="carousel-item-bottom">
+          <p class="carousel-item-author"> Marcos</p>
+
         </div>
       </div>
       <div class="carousel-item">
@@ -1073,16 +1114,25 @@ left">
         </div>
         <div class="carousel-item-bottom">
           <p class="carousel-item-author"> María</p>
-          <p class="carousel-item-city"> Eficacia + rapidez + seguridad. ¡Esas son las combinaciones que me gustan! Una solución fantástica si buscáis un método contrastado y supereficaz.</p>
+
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-item-top">
-          <p class="carousel-item-content"> Ramón</p>
+          <p class="carousel-item-content"> Eficacia + rapidez + seguridad. ¡Esas son las combinaciones que me gustan! Una solución fantástica si buscáis un método contrastado y supereficaz.</p>
         </div>
         <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> Sinceramente, no me creía que un método totalmente natural pudiera ser tan eficaz. Lo probé, ¡y vaya sorpresa! Todas las afecciones desaparecieron como por arte de magia y mucho más rápido de lo que me esperaba.</p>
-          <p class="carousel-item-city"> Ana</p>
+          <p class="carousel-item-author"> Ramón</p>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-item-top">
+          <p class="carousel-item-content"> Sinceramente, no me creía que un método totalmente natural pudiera ser tan eficaz. Lo probé, ¡y vaya sorpresa! Todas las afecciones desaparecieron como por arte de magia y mucho más rápido de lo que me esperaba.</p>
+        </div>
+        <div class="carousel-item-bottom">
+          <p class="carousel-item-author"> Ana</p>
+
         </div>
       </div>
       <div class="carousel-item">
@@ -1091,16 +1141,25 @@ left">
         </div>
         <div class="carousel-item-bottom">
           <p class="carousel-item-author"> Paula</p>
-          <p class="carousel-item-city"> Mi abuela me regaló HairForte, al principio no pensaba que pudiera ser tan eficaz. Pero por probar no pasa nada, ¿no? Pues tras 28 días teníais que ver mi cara cuando el problema desapareció como por arte de magia. Una cosa fenomenal.</p>
+
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-item-top">
-          <p class="carousel-item-content"> Marina</p>
+          <p class="carousel-item-content"> Mi abuela me regaló HairForte, al principio no pensaba que pudiera ser tan eficaz. Pero por probar no pasa nada, ¿no? Pues tras 28 días teníais que ver mi cara cuando el problema desapareció como por arte de magia. Una cosa fenomenal.</p>
         </div>
         <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> Es el único método tan innovador que conozco. Nos ha ayudado a mi madre, a mi vecina y a mí. ¡Lo mejor!</p>
-          <p class="carousel-item-city"> Paulina</p>
+          <p class="carousel-item-author"> Marina</p>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-item-top">
+          <p class="carousel-item-content"> Es el único método tan innovador que conozco. Nos ha ayudado a mi madre, a mi vecina y a mí. ¡Lo mejor!</p>
+        </div>
+        <div class="carousel-item-bottom">
+          <p class="carousel-item-author"> Paulina</p>
+
         </div>
       </div>
       <div class="carousel-item">
@@ -1109,70 +1168,16 @@ left">
         </div>
         <div class="carousel-item-bottom">
           <p class="carousel-item-author"> Mónica</p>
-          <p class="carousel-item-city"> Gracias al tratamiento HairForte, ¡tengo ganas de bailar de alegría! Nunca me había sentido tan bien, ni siquiera de joven. Estoy eternamente agradecida.</p>
+
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-item-top">
-          <p class="carousel-item-content"> Ángela</p>
+          <p class="carousel-item-content"> Gracias al tratamiento HairForte, ¡tengo ganas de bailar de alegría! Nunca me había sentido tan bien, ni siquiera de joven. Estoy eternamente agradecida.</p>
         </div>
         <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> undefined</p>
-          <p class="carousel-item-city"> undefined</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="carousel-item-top">
-          <p class="carousel-item-content"> undefined</p>
-        </div>
-        <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> undefined</p>
-          <p class="carousel-item-city"> undefined</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="carousel-item-top">
-          <p class="carousel-item-content"> undefined</p>
-        </div>
-        <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> undefined</p>
-          <p class="carousel-item-city"> undefined</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="carousel-item-top">
-          <p class="carousel-item-content"> undefined</p>
-        </div>
-        <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> undefined</p>
-          <p class="carousel-item-city"> undefined</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="carousel-item-top">
-          <p class="carousel-item-content"> undefined</p>
-        </div>
-        <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> undefined</p>
-          <p class="carousel-item-city"> undefined</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="carousel-item-top">
-          <p class="carousel-item-content"> undefined</p>
-        </div>
-        <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> undefined</p>
-          <p class="carousel-item-city"> undefined</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="carousel-item-top">
-          <p class="carousel-item-content"> undefined</p>
-        </div>
-        <div class="carousel-item-bottom">
-          <p class="carousel-item-author"> undefined</p>
-          <p class="carousel-item-city"> undefined</p>
+          <p class="carousel-item-author"> Ángela</p>
+
         </div>
       </div>
     </div>
