--- a/OFFERS-338/gr/index.html
+++ b/OFFERS-338/gr/index.html
@@ -21,7 +21,7 @@
 	<header class="intro">
 		<div class="intro__header">
 			<div class="name">
-				<p class="subtitle"> Ευέλικτα αφαιρούμενοι καπλαμάδες</p>
+				<p class="subtitle"> Ευέλικτοι αφαιρούμενοι καπλαμάδες</p>
 				<h2 class="title"> Shiny Dentes</h2>
 			</div>
 			<div class="prod">
@@ -38,7 +38,7 @@
 				<p> Λεπτοί και άνετοι</p>
 			</div>
 			<div class="list__item">
-				<p> Ενα μέγεθος ταιριάζει σε όλους</p>
+				<p> Ενα μέγεθος που ταιριάζει σε όλους</p>
 			</div>
 			<div class="list__item">
 				<p> Υποαλλεργικό</p>
@@ -57,18 +57,18 @@
 
 	<main class="main">
 		<section class="sect1">
-			<h2 class=" sect-title"> Κύρια πλεονεκτήματα<b> Shiny Dentes</b></h2>
+			<h2 class=" sect-title"> ΚΥΡΙΑ ΠΛΕΟΝΕΚΤΗΜΑΤΑ<b> Shiny Dentes</b></h2>
 			<div class="sect1__item">
 				<img src="img/sect1-1.png" alt>
 				<p><b> Γρήγορα αποτελέσματα</b> Βελτιώστε αμέσως την εμφάνιση των δοντιών σας</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-2.png" alt>
-				<p><b> Εύκολοι στην χρήση τους</b> Τα φοράτε και τα βγάζετε όποτε θέλετε.</p>
+				<p><b> Εύκολοι στην χρήση τους</b> Τους φοράτε και τα βγάζετε όποτε θέλετε.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-3.png" alt>
-				<p><b> Άνετα καθώς τα φοράτε</b> Το υψηλής τεχνολογίας οδοντικό υλικό είναι απίστευτα λεπτό, αλλά πολύ ανθεκτικό και με διάρκεια στη χρήση τους.</p>
+				<p><b> Άνετοι καθώς τα φοράτε</b> Το υψηλής τεχνολογίας οδοντικό υλικό είναι απίστευτα λεπτό, αλλά πολύ ανθεκτικό και με διάρκεια στη χρήση τους.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-4.png" alt>
@@ -76,7 +76,7 @@
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-5.png" alt>
-				<p><b> Πολυλειτουργικό</b> Καλύψτε τις ατέλειές σας, όπως στραβά δόντια, ρωγμές, μεγάλα κενά, τερηδόνα και σκούρο σμάλτο.</p>
+				<p><b> Πολυλειτουργικοί</b> Καλύψτε τις ατέλειές σας, όπως στραβά δόντια, ρωγμές, μεγάλα κενά, τερηδόνα και σκούρο σμάλτο.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-6.png" alt>
@@ -85,7 +85,7 @@
 		</section>
 
 		<section class="sect2">
-			<h2 class="sect-title"> Ένδειξη για<b> εφαρμογή</b></h2>
+			<h2 class="sect-title"> ΕΝΔΕΙΞΕΙ ΓΙΑ<b> ΕΦΑΡΜΟΓΗ</b></h2>
 			<div class="grid">
 				<div class="sect2__item">
 					<img src="img/sect2-1.png" alt>
@@ -118,7 +118,7 @@
 		</section>
 
 		<section class="sect3">
-			<h2 class="sect-title"> Χαρακτηριστικά του<b> Shiny Dentes</b></h2>
+			<h2 class="sect-title"> ΧΑΡΑΚΤΗΡΙΣΤΙΚΑ ΤΟΥ<b> Shiny Dentes</b></h2>
 			<div class="sect3__main">
 				<p> Το μέγεθος που ταιριάζει σε όλους</p>
 				<p> Δεν σκουρένουν για αρκετές δεκαετίες</p>
@@ -129,7 +129,7 @@
 		</section>
 		<section class="sect4">
 			<br>
-			<h2 class="sect-title"> Καπλαμάδες - ευθυγραμμιστές<b> Shiny Dentes</b>
+			<h2 class="sect-title"> ΚΑΠΛΑΜΑΔΕΣ - ΕΥΘΥΓΡΑΜΙΣΤΕΣ<b> Shiny Dentes</b>
 			</h2>
 			<img src="img/sect4.png" alt>
 			<p class="text"> Αυτή είναι μια πραγματική επανάσταση στη σύγχρονη οδοντιατρική!<b> Οι αφαιρούμενες καπλαμάδες με τη γυαλιστερή οδοντοστοιχία θα αποκαταστήσουν μια αισθητή και ελκυστική εμφάνιση στο χαμόγελο σας.</b> Ένα τέτοιο προϊόν είναι ικανό να καλύψει τυχόν εσωτερικά ελαττώματα: σπασμένα δόντια, ρωγμές, στραβά δόντια, σκούρο χρώμα δοντιών, τρύπες.<br> <br> Μπορείτε να τους χρησιμοποιήσετε μόνοι σας, γιατί αυτοί δεν απαιτούν προκαταρκτική λείανση ή άλλους χειρισμούς.<b> Επιπλέον, το προϊόν έχει εγκριθεί από σύγχρονους οδοντιάτρους σε διάφορες χώρες.</b> Όταν φοριούνται για μεγάλο χρονικό διάστημα, οι καπλαμάδες βοηθούν στη διαμόρφωση του σωστού δαγκώματος και ευθυγραμμίζουν τα δόντια.</p>
@@ -139,7 +139,7 @@
 		</section>
 		<section class="sect5">
 			<br>
-			<h2 class="sect-title"> Τρόπος χρήσης των<b> Shiny Dentes</b>
+			<h2 class="sect-title"> ΤΡΟΠΟΣ ΧΡΗΣΗΣ ΤΩΝ<b> Shiny Dentes</b>
 			</h2>
 			<br>
 			<div class="sect5__main">
@@ -159,7 +159,7 @@
 		</section>
 		<section class="sect6 ">
 			<br>
-			<h2 class="sect-title"> Κριτικές<b> πελατών</b></h2>
+			<h2 class="sect-title"> ΚΡΙΤΙΚΕΣ<b> ΠΕΛΑΤΩΝ</b></h2>
 			<br>
 			<br>
 			<div class="reviews owl-carousel">
@@ -211,7 +211,7 @@
 					</div>
 					<img src="img/reviews3.jpg" alt>
 
-					<p class="comment"> Τους χρησιμοποιώ για περίπου ένα μήνα, δεν έχω βρει κανένα προβλήμα. Το παρήγγειλα γιατί το χαμόγελό μου δεν ήταν καθόλου λευκό, ακόμη και τα κενά μεταξύ των μπροστινών δοντιών μου. Δεν είναι δύσκολη η εγκατάσταση τους, δεν υπάρχει καμία δυσφορία όταν τους φοράω. Τώρα χαμογελάω και γελάω πιο συχνά, διότι πριν ντρεπόμουν. Δεν νιώθω καμία ενόχληση όταν τρώω, στην πραγματικότητα, μετά από πέντε λεπτά ξεχνάτε ότι φοράτε τους καπλαμάδες. Τους συμβουλεύω!</p>
+					<p class="comment"> Τους χρησιμοποιώ για περίπου ένα μήνα, δεν έχω βρει κανένα προβλήμα. Το παρήγγειλα γιατί το χαμόγελό μου δεν ήταν καθόλου λευκό, επίσης είχα κενά μεταξύ των μπροστινών δοντιών μου. Δεν είναι δύσκολη η εγκατάσταση τους, δεν υπάρχει καμία δυσφορία όταν τους φοράω. Τώρα χαμογελάω και γελάω πιο συχνά, διότι πριν ντρεπόμουν. Δεν νιώθω καμία ενόχληση όταν τρώω, για να είμαι ειλικρινείς, μετά από πέντε λεπτά ξεχνάτε ότι φοράτε τους καπλαμάδες. Τους συμβουλεύω!</p>
 					<div class="bottom">
 						<span></span>
 						<div class="like">
@@ -270,8 +270,8 @@
 			</div>
 		
 		<form id="offer" method="POST" class="form">
-			<input type="text" name="name" required placeholder="Имя">
-			<input type="text" name="phone" required placeholder="Телефон">
+			<input type="text" name="name" required placeholder="Ονοματεπώνυμο">
+			<input type="text" name="phone" required placeholder="Τηλέφωνο">
 <input name="offer_id" type="hidden" value="{offer_id}">
 <input name="geo" type="hidden" value>
 <input name="web_id" type="hidden" value="{web_id}">
