--- a/OFFERS-349/p1-ru/index.html
+++ b/OFFERS-349/p1-ru/index.html
@@ -180,11 +180,6 @@
                   <p><b> ПРЕДСТАВЬТЕ СЕБЕ КРАСИВЫЕ, ГУСТЫЕ И УЛЬТРАСИЛЬНЫЕ ВОЛОСЫ - ЭТО ТО, ЧТО БУДЕТ СОПРОВОЖДАТЬ ВАС В ВАШЕЙ ЖИЗНИ С СЕГОДНЯШНЕГО ДНЯ. ТЫ ЗАСЛУЖИВАЕШЬ <a href="{offer}" target="_blank"> HAIRFORTE</a>! </b>
                   </p>
                   <p> Кроме того производитель настолько удовлетворен<a href="{offer}" target="_blank"> HairForte</a> что он дает такую гарантию:</p>
-                  <div class="alert alert-info" role="alert">
-                     <h4 class="alert-heading"> Гарантия возврата денег</h4>
-                     <p> Если по каким-либо причинам вы недовольны эффективностью нашего продукта, вы не избавились от облысения или не достигли своей цели, отправьте нам комплект упаковок, и мы<strong> вернем деньги.</strong>
-                     </p>
-                  </div>
                   <h4> Как сделать экономичным способом заказ<a href="{offer}" target="_blank"> HairForte</a>?</h4>
                   <p style="color:black;"> Уникальную технологию и высококачественные лечебные ингредиенты, определяющие эффективность Формулы, получить не так-то просто. Кроме того, сбор сырья занимает очень много времени, а продукт защищен многими патентами, поэтому он не может быть дешевым. </p>
                   <p> Сертифицированный и эффективный препарат против облысения <a href="{offer}" target="_blank"> HairForte</a> c<b> ОДНОРАЗОВOЙ</b> скидкой стоит<s class="al-cost-promo"> zł</s> <b class="al-cost"> zł</b>
@@ -196,7 +191,7 @@
                      <hr>
                      <p class="mb-0"> Воспользуйтесь сегодняшним предложением, заполнив форму.</p>
                   </div>
-                  <p> Нажмите  "Добавить в корзину" и <b> заполните форму</b> внизу страницы. Терапия <a href="{offer}" target="_blank"> HairForte</a> будет в Ваших руках через 2-3 дня. Теперь Вам судить. Если Вы не удовлетворены на 100%, просто отправьте упаковку продукта на обратный адрес, и Вы получите свои деньги обратно - безо всяких вопросов.</p>
+                  <p> Нажмите  "Добавить в корзину" и <b> заполните форму</b> внизу страницы. Терапия <a href="{offer}" target="_blank"> HairForte</a> будет в Ваших руках через 2-3 дня. Теперь Вам судить.  </p>
                   <div class="d-md-none">
                      <div class="testimonials">
                         <div class="single-testimonial alert alert-primary">
@@ -215,11 +210,11 @@
                      <br>
                      <a href="{offer}" target="_blank"><img src="img/vvv42.jpg" alt="Hairstim" style="max-width: 100px;"></a>
                      <p style="text-align: center; color:black;" class="actual_price">
-                        <strong><s class="al-cost-promo"> zł</s><br>
-                        <span class="al-cost"> zł</span>
+                        <strong><s class="al-cost-promo">00 zł</s><br>
+                        <span class="al-cost">00 zł</span>
                         </strong>
                      </p>
-                     <div class="alert alert-warning" style="font-size: 15px;"> Заказывая сегодня,<b> вы экономите<span class="al-cost"> zł</span></b> а также<b> получите бесплатную доставку.</b>
+                     <div class="alert alert-warning" style="font-size: 15px;"> Заказывая сегодня,<b> вы экономите<span class="al-cost"> 00 zł</span></b> а также<b> получите бесплатную доставку.</b>
                         <br> Завтра предложение отменяется.</div>
                   </div>
                   <div class="row" data-action="gwarantowane-2016" data-category="Funnel" data-event data-label="center" id="form" style="margin: 10px 0;">
@@ -228,29 +223,11 @@
                         <div class="alert alert-success" style="font-weight: 400; font-size: 13px;" role="alert"> Вам не нужно сейчас вводить адрес доставки - мы договоримся по телефону. </div>
                         <div class="item2">
                            <div class="clear"></div>
-                           <div class="form-group" style="display: none;">
-                              <label> Страна:</label>
-                              <select class="form-control al-country" name="country"></select>
-                           </div>
                            <div class="clear"></div>
                            <div class="col-12">
                               <center>
-                                 <div class="row" style="justify-content: center;">
-                                    <a href="{offer}" target="_blank"><img class="dostawa_img" src="img/darmowa-dostawa.png"></a>
-                                    <a href="{offer}" target="_blank"><img class="dostawa_img" src="img/bezpieczne-zakupy.png"></a>
-                                 </div>
                                  <a name="send" href="{offer}" class="btn btn-success btn-lg" style="background:#ff8c00!important; border-color:#ff8c00!important;"> Заказываю</a>
                               </center>
-                           </div>
-                           <div class="item4">
-                              <div class="info_block">
-                                 <div> Доставка:</div>
-                                 <span style="color:green"> БЕСПЛАТНО</span>
-                              </div>
-                              <div class="info_block">
-                                 <div> Итого:</div>
-                                 <span style="color:green"><span id="total_price" class="al-cost"> zł</span></span>
-                              </div>
                            </div>
                            <br>
                            <div class="clear"></div>
@@ -261,8 +238,6 @@
                         <div class="clear"></div>
                      </form>
                   </div>
-                  <p><strong> P.S.</strong> Напоминаем, что предложение заканчивается сегодня.</p>
-                  <p><strong> P.P.S.</strong> Помните, что каждый заказ поставляется с 30-дневной гарантией возмещения</p>
                </article>
             </section>
          </div>
